crates/uniplate/tests/derive-fail/no-generics.stderr
error[E0277]: the trait bound `G: Uniplate` is not satisfied
 --> tests/derive-fail/no-generics.rs:3:29
  |
3 | #[derive(PartialEq,Eq,Clone,Uniplate)]
  |                             ^^^^^^^^ the trait `Uniplate` is not implemented for `G`
  |
  = help: the following other types implement trait `Uniplate`:
            i8
            i16
            i32
            i64
            i128
            u8
            u16
            u32
          and $N others
note: required by a bound in `Biplate`
 --> src/biplate.rs
  |
  | pub trait Biplate<To>
  |           ------- required by a bound in this trait
...
  |     To: Sized + Clone + Eq + Uniplate + 'static,
  |                              ^^^^^^^^ required by this bound in `Biplate`
  = note: this error originates in the derive macro `Uniplate` (in Nightly builds, run with -Z macro-backtrace for more info)
